altera application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/estudos-api
 # Configurações do Spring JPA e Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+# Configurações de exibição de erros
+server.error.include-message=always
