--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Configurações de exibição de erros
 server.error.include-message=always
+
+spring.jackson.serialization.fail-on-empty-beans=false
